# TradeSync

./: .env  .env.bak  .env.example  .gitignore  CLAUDE.md  README.md  SESSION_SUMMARY.md  STEP_0_SUMMARY.md  docker-compose.yml  main.py  requirements.txt  roadmap.md  run_dev.py  test_payload.json
.claude/: settings.local.json
core/: agent.py  config.py  data_collector.py  processor.py  scoring.py
docs/: AGENT_INTERFACE.md  CLAUDE_HANDOFF_PHASE3B.md  DOC_PROMPTS.md  PRD.md  ROUTE_INVENTORY.md  RUNBOOKS.md  SYSTEM_DESIGN.md  dependency_resolution.md  phase3A_report.md  phase3B_report.md  phase3C_report.md
docs/OPENAPI/: state-api.v0_1.yaml
docs/architecture/: PHASE_3C_CONTEXT.md  market_storage.md  phase3B_dataflow.md
docs/changes/: 2026-01-21_phase3A2_product_surfaces.md  2026-01-21_phase3A_cockpit_trust_patch.md  2026-01-21_phase3A_complete.md  2026-01-21_phase3B_complete.md  2026-02-11_phase3C_complete.md  2026-02-13_phase3D_complete.md  2026-03-25_cockpit_ui_bug-audit-and-reconciliation.md
docs/contracts/: RISK_LIMITS.md  (+4 more)
executor/: drift_exec.py  exec_interface.py  hyper_exec.py
libs/tradesync_core/: pyproject.toml
libs/tradesync_core/tradesync_core/: __init__.py  contracts.py  core_score.py  risk.py  scoring.py  symbols.py
ops/: apply_schema.py  compose.full.yml  compose.infra.yml
tests/: test_contract_compat.py  test_core_scorer.py  test_ingest_gateway.py  test_ingest_gateway_collectors.py  test_phase3c.py  test_phase3d.py  verify_drift.py  verify_drift_placeholder.py  verify_hyperliquid.py
tools/: check_regression.py  export_replay_dataset.py
(+195 files in other folders)
