[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradesync-core"
version = "0.1.0"
description = "TradeSync shared scoring, risk, and normalization library"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.9.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tradesync_core*"]
